# chess-tuning-tools

./: AGENTS.md  AUTHORS.rst  HISTORY.rst  README.rst  pyproject.toml
tests/: conftest.py  test_cli.py  test_dbutils.py  test_integration.py  test_io.py  test_io_extended.py  test_io_polyglot.py  test_local.py  test_local_additional.py  test_local_construct_engine.py  test_local_counts_logger.py  test_local_data_parsing.py  test_local_eloprob.py  test_local_engine_config.py  test_local_optimizer.py  test_local_optimizer_edge.py  test_local_print_results.py  test_local_update_model.py  test_local_utils.py  test_plots.py  test_plots_activesubspace.py  test_plots_objective.py  test_plots_optima.py  test_plots_partial_dependence.py  test_plots_performance.py  test_plots_sampling.py  test_priors.py  test_summary.py  test_tune.py  test_utils.py  test_utils_extended.py
tune/: cli.py  io.py  local.py  plots.py  priors.py  summary.py  utils.py
