[tool.poetry]
name = "chess-tuning-tools"
version = "0.9.2+bc61b07"
description = "A collection of tools for local and distributed tuning of chess engines."
authors = ["Karlson Pfannschmidt", "Claes Fransson"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]
readme = "README.rst"
repository = "https://github.com/Claes1981/chess-tuning-tools"
keywords = ["chess", "tuning", "optimization", "engine"]
documentation = "https://chess-tuning-tools.readthedocs.io"
packages = [
    {include = "tune"}
]

[tool.poetry.dependencies]
python = "^3.7"
bask = ">=0.9.3,<1.0.0"
Click = ">=7.1.2"
numpy = ">=1.20"
scipy = ">=1.6"
scikit-optimize = ">=0.8.1"
atomicwrites = ">=1.4.0"
scikit-learn = ">=0.22,<1.0.1"
dill = ">=0.3.4"
athena-mathlab = "^0.1.2"
prettytable = "^3.0"
importlib_metadata = {version = ">=1.4", python = "~3.7"}
joblib = {version = ">=1.1", optional = true}
psycopg2 = {version = ">=2.9", optional = true}
sqlalchemy = {version = ">=1.4", optional = true}
pandas = {version = ">=1.1.0", optional = true}
Sphinx = {version = ">=3", optional = true}
sphinx-book-theme = {version = ">=0.2", optional = true}
myst-nb = {version = ">=0.9", optional = true}

[tool.poetry.extras]
dist = ["joblib", "psycopg2", "sqlalchemy", "pandas"]
docs = ["Sphinx", "sphinx-book-theme", "myst-nb"]

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
pip = ">=21.3"
wheel = ">=0.34.2"
flake8 = ">=4.0"
Sphinx = ">=4"
Click = ">=7.1.2"
black = "^19.10b0"
pre-commit = ">=2.17"
isort = ">=5.10"
flake8-bugbear = ">=22.1"
sphinx-book-theme = ">=0.2"
myst-nb = ">=0.9"
sphinx-autobuild = ">=2021"
nox = ">=2022"
nox-poetry = ">=0.9"
mypy = ">=0.931"

[tool.poetry.scripts]
tune = "tune.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Claes1981/chess-tuning-tools/issues"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "v{base}+{distance}.{commit}"

[build-system]
requires = ["poetry>=0.12", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
