[project]
name = "chess-tuning-tools"
dynamic = ["version"]
description = "A collection of tools for local and distributed tuning of chess engines."
authors = ["Karlson Pfannschmidt", "Claes Fransson"]
requires-python = ">=3.10,<3.14"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "chess",
    "tuning",
    "optimization",
    "engine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

dependencies = [
    "atomicwrites>=1.4.0",
    "bask=https://github.com/Claes1981/bayes-skopt.git",
    "Click>=7.1.2",
    "dill>=0.3.4",
    "numpy>=2.0.0",
    "scikit-learn>=1,<2",
    "scikit-optimize=https://github.com/Claes1981/scikit-optimize.git",
    "scipy>=1.5.2",
    "athena-mathlab>=0.1.2",
    "prettytable>=3.0",
]

[project.optional-dependencies]
dist = [
    "joblib>=0.16.0",
    "pandas>=1.1.0",
    "psycopg2>=2.8.5",
    "sqlalchemy>=1.3.18",
]
docs = [
    "Sphinx>=3",
    "myst-nb>=0.9",
    "sphinx-book-theme>=0.0.35",
]

[project.urls]
Repository = "https://github.com/Claes1981/chess-tuning-tools"
Documentation = "https://chess-tuning-tools.readthedocs.io"
"Bug Tracker" = "https://github.com/Claes1981/chess-tuning-tools/issues"

[project.scripts]
tune = "tune.cli:cli"

[dependency-groups]
dev = [
    "mypy>=0.910",
    "nox-uv>=0.6.0",
    "nox>=2023.4.22",
    "pip>=21.1.2",
    "pre-commit>=2.6.0",
    "pytest>=6.0.1",
    "ruff==0.14.2",
    "sphinx-autobuild>=0.7.1",
    "Sphinx>=3",
    "wheel>=0.34.2",
]

[tool.hatch.build.targets.sdist]
include = ["tune"]

[tool.hatch.build.targets.wheel]
include = ["tune"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
exclude = ["docs"]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4"]
ignore = ["E203", "E501", "F403", "F405"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
format = "0.9.5+{commit}

[build-system]
requires = ["hatchling>=1.15", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
